# nba-rookie-dashboard

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260703_0001_create_initial_tables.py  20260703_0002_fix_last_game_date_column_type.py
backend/: Dockerfile  main.py  start.sh
backend/agent/: client.py  context_events.py  fallback.py  graph.py  narrative_stream.py  state.py  state_builder.py  trend_analysis.py
backend/agent/nodes/: analyze_trends.py  detect_context.py  generate_narrative.py
backend/agent/prompts/: narrative.py
backend/api/: deps.py
backend/api/routes/: draft.py  narrative.py  players.py  season.py
backend/core/: config.py  consts.py  langsmith_verify.py  types.py
backend/data/: aggregation_service.py  cache_postgres.py  cache_redis.py  cache_service.py  career_service.py  draft_service.py  game_log_service.py  gap_service.py  models.py  nba_client.py  player_service.py  season_averages_service.py  season_detector.py  season_service.py
backend/schemas/: context.py  gaps.py  narrative.py  season_averages.py  stats.py  trends.py
evals/: fixtures.py  golden_dataset.jsonl  judge.py  metrics.py  run_eval.py
frontend/: Dockerfile  api_client.py  app.py  cache.py  charts.py  formatting.py  sse.py  state.py
frontend/views/: career.py  draft_overview.py  narrative.py  player.py  sidebar.py  trends.py
shared/: consts.py  types.py
shared/schemas/: career.py  draft.py  narrative.py  season.py  stats.py  trends.py
tests/: conftest.py
tests/integration/: test_data_pipeline.py  test_health.py  test_narrative_endpoint.py  test_players_endpoint.py
tests/unit/: test_agent_graph.py  test_aggregation_service.py  test_analyze_trends.py  test_config.py  test_detect_context.py  test_fallback.py  test_formatting.py  test_game_log_service.py  test_gap_service.py  test_generate_narrative.py  test_narrative_stream.py  test_player_view.py  test_rolling_average.py  test_unit_conversion.py
