[tool.poetry]
name = "nba-rookie-dashboard"
version = "0.1.0"
description = "NBA Rookie Dashboard — AI-powered stats visualizer with narrative generation"
authors = ["jarekswierek <jaroslaw.swierek@gmail.com>"]
readme = "README.md"
packages = [
    { include = "shared" },
    { include = "backend" },
    { include = "frontend" },
]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.139.0"
uvicorn = { extras = ["standard"], version = "^0.50.0" }
pydantic = "^2.13.0"
pydantic-settings = "^2.11.0"
httpx = "^0.28.1"
redis = "^8.0.0"
asyncpg = "^0.31.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
greenlet = "^3.2.0"
alembic = "^1.16.0"
nba-api = "^1.10.0"
anthropic = "^0.116.0"
langchain = "^1.3"
langchain-anthropic = "^1.4"
langsmith = "^0.9"
streamlit = "^1.59.0"
plotly = "^6.8.0"
pandas = "^3.0"
sse-starlette = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.1.0"
black = "^26.5"
ruff = "^0.15.0"
mypy = "^2.1"
docformatter = "^1.7.7"
types-redis = "^4.6.0"

[tool.black]
target-version = ["py314"]
line-length = 81

[tool.docformatter]
wrap-summaries = 81
wrap-descriptions = 81

[tool.ruff]
line-length = 81

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
strict = true
python_version = "3.14"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["nba_api.*", "streamlit.*", "plotly.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
